# ai-media-monitor-mcp

./: .env.example  .gitignore  CLAUDE.md  CLIENT_README.md  README.md  ai-media-monitor-mcp.py  api_weekly_report.py  client.py  config.yaml  main.py  pyproject.toml  server.py
config/: email_config.yaml  email_config.yaml.example
dashboard/: README.md  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/articles/: route.ts
dashboard/src/app/api/logs/: route.ts
dashboard/src/app/api/logs/[filename]/: route.ts
dashboard/src/app/api/stats/: route.ts
dashboard/src/app/api/weekly-report/: route.ts
dashboard/src/app/logs/[filename]/: page.tsx
dashboard/src/app/weekly-report/: page-complex.tsx  page.tsx
data/: articles.db
docs/: API.md  CONFIGURATION.md  DEVELOPMENT.md  LOGGING.md
reports/: ai_media_report_20250802_231101.json  ai_media_report_20250802_231156.md  ai_media_report_20250803_084538.json  ai_media_report_20250803_084538.md  ai_media_report_20250803_194006.json  ai_media_report_20250803_194006.md  ai_media_report_20250805_184412.md  ai_media_report_20250805_184531.md  ai_media_report_20250805_185937.md  ai_media_report_20250805_190045.md
scripts/: daily_collection.sh  weekly_report.sh
src/ai_media_monitor/: __init__.py  __main__.py
src/ai_media_monitor/core/: __init__.py  analyzer.py  config_loader.py
src/ai_media_monitor/models/: __init__.py  article.py  config.py  expert.py  topic.py
src/ai_media_monitor/storage/: __init__.py  database.py
src/ai_media_monitor/utils/: __init__.py  email_sender.py  logging_config.py  text_analysis.py  web_utils.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  mock_responses.py  sample_data.py
tests/integration/: __init__.py  test_mcp_tools.py
tests/unit/: __init__.py  test_config_loader.py  test_models.py  test_text_analysis.py
