[project]
name = "ai-media-monitor-mcp"
version = "1.0.0"
description = "AI Media Monitor MCP server for Dutch media analysis and podcast planning"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "aiohttp>=3.8.0",
    "feedparser>=6.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "beautifulsoup4>=4.10.0",
    "lxml>=4.9.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["ai-media-monitor-mcp.py", "config.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
