[project]
name = "ai-media-monitor-mcp"
version = "1.0.0"
description = "AI Media Monitor MCP server for Dutch media analysis and podcast planning"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "aiohttp>=3.8.0",
    "feedparser>=6.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "beautifulsoup4>=4.10.0",
    "lxml>=4.9.0",
    "mcp[cli]",
    "aiofiles>=23.0.0"
]

[project.optional-dependencies]
email = [
    "aiosmtplib>=3.0.0",
    "email-validator>=2.0.0"
]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
    "pre-commit>=3.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["config.yaml"]

[project.scripts]
ai-media-monitor = "server:main"

[tool.uv.scripts]
lint = "ruff check ."
format = "ruff format ."
lint-fix = "ruff check --fix ."
test = "pytest"
server = "python server.py"
client = "python client.py"
weekly-report = "python client.py --action weekly-report"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = []
unfixable = ["B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
